# nomadz_core

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  recover.json  tsconfig.json
programs/nomadz_core/: Cargo.toml
programs/nomadz_core/src/: lib.rs
programs/nomadz_core/src/constants/: constants.rs
programs/nomadz_core/src/errors/: mod.rs
programs/nomadz_core/src/errors/candy_machine/: initialize_candy_machine.rs  mod.rs
programs/nomadz_core/src/errors/config/: initialize.rs  initialize_config.rs
programs/nomadz_core/src/errors/referral/: apply_referral.rs  mod.rs
programs/nomadz_core/src/errors/soulbound/: mint_soulbound_nft.rs  mod.rs
programs/nomadz_core/src/errors/user/: initialize_user_asset_data.rs  mod.rs  update_user_asset_data.rs  update_user_with_referrer.rs
programs/nomadz_core/src/instructions/: mod.rs
programs/nomadz_core/src/instructions/candy_machine/: create_candy_machine.rs  initialize_candy_machine.rs  mod.rs
programs/nomadz_core/src/instructions/config/: initialize.rs  update_config.rs
programs/nomadz_core/src/instructions/referral/: apply_referral.rs
programs/nomadz_core/src/state/: mod.rs
tests/: nomadz_core.ts  pipeline.ts
tests/cases/: nomadz_core.ts
tests/cases/config/: initialize.test.ts  update.test.ts
tests/cases/fetch/: fetch.test.ts
tests/cases/referral/: apply_referral.test.ts  update_user.test.ts
tests/cases/soulbound/: mint.test.ts  update.test.ts
tests/metadata/: soulbound.metadata.json
utils/: account_utils.ts  accounts.json
(+13 files in other folders)
