[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
mpl-candy-machine-core = { git = "https://github.com/NOMADZdev/mpl-candy-machine.git", branch = "main" }
